--- a/languages/no-nb.json
+++ b/languages/no-nb.json
@@ -18,33 +18,33 @@
   "index-workshop-header": "Workshops",
   "index-workshop-info": "De här är personligen anordnade workshops, ofta gratis, där workshoppers utgör läroplanen och mentorer vägleder deltagarna genom utmaningar.",
   "index-workshop-links-host": "Anordna din egen",
-  "index-workshop-links-events": "Vis alla events",
+  "index-workshop-links-events": "Vis alle events",
   "index-workshop-links-writeups": "Les om tidigere events",
   "index-upcoming-header": "Kommende workshops",
-  "index-upcoming-loading": "Laddar...",
-  "index-upcoming-error": "Det går inte att hitta evenemang, sorry!",
-  "index-upcoming-all-events": "Visa alla evenemang",
-  "index-upcoming-no-events": "Inga kommande evenemang. Kolla in",
-  "index-upcoming-past-events": "tidigare evenemang",
+  "index-upcoming-loading": "Laster...",
+  "index-upcoming-error": "Vi klarte ikke finne arrangementet, bekalger!",
+  "index-upcoming-all-events": "Vis alle arrangement",
+  "index-upcoming-no-events": "Ingen arrangementer nærmeste tiden.",
+  "index-upcoming-past-events": "tidigere arrangementer",
   "index-upcoming-past-events2": "!",
-  "index-host-header": "Vem som helst kan anordna",
-  "index-host-past": "Totalt har det varit",
-  "index-host-past2": "evenemang!",
+  "index-host-header": "Hvem som helst kan arrangere",
+  "index-host-past": "Totalt har det vært",
+  "index-host-past2": "arrangement!",
   "index-host-want-to-host": "NodeSchool är decentraliserad, öppen programvara som bedrivs ideellt. Vill du anordna ett event?",
-  "index-host-want-to-host2": "Hjälpresurser och tips",
-  "index-host-want-to-host3": "om hur.",
+  "index-host-want-to-host2": "Hjelp og tips",
+  "index-host-want-to-host3": "om hvordan.",
   "index-workshopper-header": "Workshoppers",
   "index-workshopper-info": "Workshopper används som namn på de undervisningsmoduler med öppen källkod som associeras med NodeSchool. Samtliga är självguidande (du behöver inte närvara på en workshop för att genomföra en) och de flesta fungerar offline.",
-  "index-workshopper-list-problem": "Ställ frågor om du kört fast",
-  "index-workshopper-list-faq": "Svara på frågor",
-  "index-workshopper-list-host": "Bygg en workshop",
-  "index-get-going-header": "Kom igång —",
-  "index-get-going-info": "Du behöver",
-  "index-get-going-info2": "på din dator för att komma igång\n    med var och en. Använd sen",
+  "index-workshopper-list-problem": "Still spørsmål om du ikke kommer videre",
+  "index-workshopper-list-faq": "Svar på spørsmål",
+  "index-workshopper-list-host": "Lag en workshop",
+  "index-get-going-header": "Kom igang —",
+  "index-get-going-info": "Du trenger",
+  "index-get-going-info2": "på din datamaskin for å komme igang\n    med var och en. Använd sen",
   "index-get-going-info3": "(som följer med i Node) för att installera vardera\n    modul med kommandot nedanför. När väl installerat,\n    bara skriv namnet på workshoppern för att köra den.",
-  "index-get-going-editor": "Du kommer även att behöva en",
+  "index-get-going-editor": "Du kommer tilogmed til å trengen en",
   "index-get-going-editor2": "text-editor",
-  "index-get-going-editor3": ", om du inte redan har en, för att redigera kod. Några förslag:",
+  "index-get-going-editor3": ", om du ikke alt har en, for å skrive kode. Her er noen forslag:",
   "index-get-going-editor4": ",",
   "index-get-going-editor5": ",",
   "index-get-going-editor6": ",",
