--- a/languages/nb-no.json
+++ b/languages/nb-no.json
@@ -1,6 +1,6 @@
 {
   "menu-index": "Hjem",
-  "menu-tutorials": "Workshops",
+  "menu-tutorials": "Oppgaver",
   "menu-events": "Arrangementer",
   "menu-chapters": "Avdelinger",
   "menu-about": "Om oss",
@@ -11,17 +11,17 @@
   "footer-contribute-question": "Rapporter et problem",
   "footer-contribute-answer": "Svar på en spørsmål",
   "footer-about-header": "Om oss",
-  "footer-about-build": "Lag en workshopper",
-  "footer-about-host": "Arranger en workshop",
-  "index-header-top": "Workshops som lærer deg utvikling med web teknologi. Du kan gjøre dem alene eller på en NodeSchool event i nærheten.",
+  "footer-about-build": "Lag en oppgave",
+  "footer-about-host": "Arranger en NodeSchool",
+  "index-header-top": "Oppgaver som lærer deg utvikling med web teknologi. Du kan gjøre dem alene eller på en NodeSchool event i nærheten.",
   "index-header-bottom": null,
-  "index-get-started": "Kom igang med workshopen Lær Deg Node:",
-  "index-workshop-header": "Workshops",
-  "index-workshop-info": "Dette er personlige workshops, ofte gratis, der workshoppers utgjør læreplanen og veileder deg gjennom oppgavene.",
+  "index-get-started": "Kom igang med oppgaven Lær Deg Node:",
+  "index-workshop-header": "Oppgaver",
+  "index-workshop-info": "Dette er personlige oppgaver, ofte gratis, der oppgavene utgjør læreplanen og veileder deg gjennom oppgavene.",
   "index-workshop-links-host": "Hold din egen",
   "index-workshop-links-events": "Vis alle arrangement",
   "index-workshop-links-writeups": "Les om tidigere arrangement",
-  "index-upcoming-header": "Kommende workshops",
+  "index-upcoming-header": "Kommende arrangementer",
   "index-upcoming-loading": "Laster...",
   "index-upcoming-error": "Vi klarte ikke finne arrangementet, beklager!",
   "index-upcoming-all-events": "Vis alle arrangement",
@@ -39,11 +39,12 @@
   "index-host-want-to-host": "NodeSchool er desentralisert, åpen programvare som drives ideellt. Vil du arrangenere en event?",
   "index-host-want-to-host2": "Hjelp og tips",
   "index-host-want-to-host3": "om hvordan.",
-  "index-workshopper-header": "Workshops",
+  "index-workshopper-header": "Oppgaver",
+  "index-workshopper-list-view": "Vis alle oppgaver",
   "index-workshopper-info": "Workshopper er navnet på åpen kildekode rammeverket som brukes i NodeSchool. Du kan gjøre dem alene (du må ikke være på en NodeSchool for å gjøre oppgavenen) og de fleste kan gjøres offline.",
   "index-workshopper-list-problem": "Still spørsmål om du ikke kommer videre",
   "index-workshopper-list-faq": "Svar på spørsmål",
-  "index-workshopper-list-host": "Lag en workshop",
+  "index-workshopper-list-host": "Lag en oppgave",
   "index-get-going-header": "Kom igang —",
   "index-get-going-info": "Du trenger",
   "index-get-going-info2": "på din datamaskin for å komme igang\n    . Senere bruker du",
@@ -56,12 +57,12 @@
   "index-get-going-editor6": ",",
   "index-get-going-editor7": ".",
   "index-workshoppers-core-header": "Core",
-  "index-workshoppers-core-info": "Disse workshoppers fokuserer på grunnleggende ferdigheter for å kunne jobbe med Node.js.",
+  "index-workshoppers-core-info": "Disse oppgavene fokuserer på grunnleggende ferdigheter for å kunne jobbe med Node.js.",
   "index-workshoppers-core-link-pre": "Kommer du ikke videre? Stille et spørsmål i",
   "index-workshoppers-core-link-text": "diskusjonen",
   "index-workshoppers-core-link-post": ".",
   "index-workshoppers-elective-header": "Valg",
-  "index-workshoppers-elective-info": "Workshoppers for populære biblioteker eller måter å utvikle i Node.js.",
+  "index-workshoppers-elective-info": "Oppgaver for populære biblioteker eller måter å utvikle i Node.js.",
   "index-workshoppers-elective-link-pre": "Kommer du ikke videre? Still et spørsmål i",
   "index-workshoppers-elective-link-post": ".",
   "index-workshoppers-elective-link-text": "diskusjonen",
@@ -123,22 +124,22 @@
   "about-history3": "Når brukeren føler seg sikker på løsningen sendes den til workshoppen for kontroll. Workshoppen kjører løsningen og kontrollerer at alle krav er oppfylt. Hvis noe er feil eller det mangler noe får du relevant tilbakemelding og får prøve igjen. Hvis koden oppfyller alle kravene er oppgaven bestått og man kan gå videre til neste oppgave.",
   "about-history4": "Alt dette skjer automatisk. Workshoppers kan ses på som en serie unit-tester som man må skrive den riktige koden for å komme videre.",
   "about-header-philosophy-title": "Et stort utvalg av emner",
-  "about-philosophy": "Alle NodeSchool workshops er laget i Node, men en workshops innhold behøver ikke handle om Node. For eksempel så lærer shader-school workshoppen deg konsepter for datagrafikk og inneholder ingen programmering i JavaScript.",
-  "about-philosophy2": "NodeSchools community har utviklet flere fantastiske verktøy for å lage nye workshops. Om du har en idé til en workshop så oppfordrer vi deg til å lese mer om dette på siden Lage Workshops.",
+  "about-philosophy": "Alle NodeSchool oppgaver er laget i Node, men en oppgave sitt innhold behøver ikke handle om Node. For eksempel så lærer shader-school deg konsepter for datagrafikk og inneholder ingen programmering i JavaScript.",
+  "about-philosophy2": "NodeSchools community har utviklet flere fantastiske verktøy for å lage nye oppgaver. Om du har en idé til en oppgave så oppfordrer vi deg til å lese mer om dette på siden Lage oppgave.",
   "about-header-info-title": "Arrangementer rundt om i verden",
   "about-info": "Vi har hatt communities som har arrangert NodeSchool arrangementer i alle kontinenter utenom Antarktis. Alle som vil kan arrangere og som community forsøker vi lage gjenbrukbar informasjon, retningslinjer og tips for å gjøre arrangementene morosmme og interessante for alle. Se vår side om å arrangere egne NodeSchools for å lære mer.",
   "about-header-touch-title": "Kontakt oss",
   "about-info2": "Vi bruker GitHub for å organisere NodeSchool. Enkleste måte å komme i kontakt med oss er gjennom vårt repository for de som arrangerer. Opprett en ny issue så blir de som arrangerer varslet om det og kan svare. Dette er mye bedre enn å sende en e-post til noen av de som arrangerer.",
   "about-header-talk-title": "Hør og se folk snakke om NodeSchool",
   "about-info3": "I avsnitt 55 av podcasten NodeUp snakker Mikeal Rogers, Max Ogden og andra communitydeltagare om NodeSchool. På Cascadia JS 2014 snakker Jason Rhodes, fra Baltimore, om det å drive NodeSchools.",
-  "building-workshops-header": "Å lage en NodeSchool workshop",
+  "building-workshops-header": "Å lage en NodeSchool",
   "building-workshops-subtitle": "Her er noen ofte brukte verktøy som kan brukes til å lage NodeSchool-workshops.",
   "building-workshops-info": "for et komplett nodeschool CLI workshop-ramverk.",
   "building-workshops-info2": "for å få et enklere og mer lettvekts alternativ til workshopper",
-  "building-workshops-title-info3": "Lag en ny type workshop!",
-  "building-workshops-info3": "Ikke være redd for å 'hacke' formatet! Mao. hvis du vil skrive en workshop for å lære bort CSS så kan det hende du må finne på ditt eget workshop format. For eksempel ",
+  "building-workshops-title-info3": "Lag en ny type oppgave!",
+  "building-workshops-info3": "Ikke være redd for å 'hacke' formatet! Mao. hvis du vil skrive en oppgave for å lære bort CSS så kan det hende du må finne på ditt eget format. For eksempel ",
   "building-workshops-info3A": "modulen var skrevet for",
-  "building-workshops-info3B": "workshopen.",
+  "building-workshops-info3B": "oppgavenen.",
   "building-workshops-info3C": null,
   "host-header": "Arrangere en NodeSchool",
   "host-info": "NodeSchool er communitydrevet og er 100% åpen programvare. Det betyr at hvem som helst kan bruke NodeSchools materiale og/eller arrangere en event.",
